# holisticai

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md  README.rst  asas  pyproject.toml  ruff_default.toml
.github/workflows/: feature-workflow.yml  pr-workflow.yml  publish-pypi-workflow.yml  publish-slack-workflow.yml  publish-testpypi-workflow.yml  publish-workflow.yml  release-workflow.yml
docs/: README  conf.py  index.rst  mitigating_bias.rst  mitigation.rst  requirements.txt  run_tutorials.py  technical_risks.rst  tutorials.rst  utils.rst
docs/.generated/: holisticai.bias.metrics.abroca.html  holisticai.bias.metrics.abroca.rst  holisticai.bias.metrics.accuracy_diff.html  holisticai.bias.metrics.accuracy_diff.rst  holisticai.bias.metrics.accuracy_matrix.html  holisticai.bias.metrics.aggregate_diversity.rst  holisticai.bias.metrics.average_odds_diff.rst  holisticai.bias.metrics.avg_f1_ratio.html  holisticai.bias.metrics.avg_precision_ratio.html  holisticai.bias.metrics.avg_precision_ratio.rst  holisticai.bias.metrics.avg_score_diff.rst  holisticai.bias.metrics.cluster_balance.html  holisticai.bias.metrics.cluster_balance.rst  holisticai.bias.metrics.cluster_dist_entropy.rst  holisticai.bias.metrics.cluster_dist_kl.html  holisticai.bias.metrics.cluster_dist_kl.rst  holisticai.bias.metrics.cluster_dist_l1.rst  holisticai.bias.metrics.clustering_bias_metrics.html  holisticai.bias.metrics.clustering_bias_metrics.rst  holisticai.bias.metrics.cohen_d.rst  holisticai.bias.metrics.confusion_matrix.html  holisticai.bias.metrics.confusion_matrix.rst  holisticai.bias.metrics.disparate_impact.html  holisticai.bias.metrics.disparate_impact.rst  holisticai.bias.metrics.exposure_entropy.rst  holisticai.bias.metrics.exposure_kl.rst  holisticai.bias.metrics.exposure_l1.rst  holisticai.bias.metrics.false_positive_rate_diff.html  holisticai.bias.metrics.false_positive_rate_diff.rst  holisticai.bias.metrics.four_fifths.rst  holisticai.bias.metrics.frequency_matrix.rst  holisticai.bias.metrics.mad_score.html  holisticai.bias.metrics.max_statistical_parity.html  holisticai.bias.metrics.min_cluster_ratio.html  holisticai.bias.metrics.multiclass_average_odds.rst  holisticai.bias.metrics.multiclass_bias_metrics.rst  holisticai.bias.metrics.multiclass_statistical_parity.html  holisticai.bias.metrics.multiclass_statistical_parity.rst  holisticai.bias.metrics.multiclass_true_rates.rst  holisticai.bias.metrics.no_disparate_impact_level.html  (+87 more)
docs/bias/: bias.rst  mitigation.rst  plotting.rst
docs/efficacy/: efficacy.rst  metrics.rst
docs/privacy/: attack.rst  privacy.rst
docs/source/: build.sh  conf.py  index.rst  metrics.rst  mitigation.rst  pipeline.rst  technical_risks.rst
docs/tutorials/: update_tutorials.sh
holisticai/benchmark/: BENCHMARK.md  __init__.py
holisticai/bias/: __init__.py
holisticai/datasets/: __init__.py  _dataloaders.py  _preprocessers.py  dataset_processing_utils.py  utils_adult_dataset.py  utils_censuskdd_dataset.py  utils_compas_dataset.py  utils_credit_dataset.py  utils_crime_dataset.py  utils_diabetes_dataset.py  utils_german_dataset.py  utils_lastfm_dataset.py  utils_law_school_dataset.py  utils_marketing_dataset.py  utils_student_dataset.py
holisticai/efficacy/: metrics.py
holisticai/explainability/: __init__.py  _explainers.py  feature_importance.py
holisticai/pipeline/: _pipeline.py  _pipeline_helper.py
holisticai/robustness/: __init__.py  utils.py
holisticai/utils/: __init__.py  _formatting.py  _plotting.py  _recommender_tools.py  _validation.py
holisticai/wrappers/: estimator.py  formatting.py  keras.py  mxnet.py  pytorch.py  scikitlearn.py  tensorflow.py  utils.py
paper/: paper.ipynb
tests/: test_holisticai.py
tests/bias/: __init__.py  utils.py
tests/commons/: test_feature_importance.py  test_feature_importance_strategies.py  test_local_feature_importance.py  test_partial_dependence.py  test_xai_ease_score.py
tests/data/: german_credit_train_0.csv  small_test_classification.csv  small_test_explainability.csv  small_test_explainability_importance.csv  small_test_recommender.csv  small_test_regression.csv
tests/datasets/: test_load_datasets.py
tests/efficacy/: test_metrics.py
tests/explainability/: explainability_metrics.ipynb  explainability_metrics.py  test_all_metrics.py  test_explainer_classification_metrics.py  test_explainer_metrics.py  test_explainer_regression_metrics.py
tests/security/: test_attribute_attack.py  test_attribute_inference_classification.py  test_attribute_inference_regression.py  test_data_minimization.py  test_feature_selectors.py  test_ml_leaks.py  test_privacy_risk_score.py  test_shapr.py  utils.py
tests/testing_utils/: _tests_utils.py
tests/trade_off/: test_fairea_trade_off_tool.py
tutorials/benchmark/: paper_benchmark.ipynb  results.csv  template_benchmark.ipynb
tutorials/cookbook/: plots.ipynb
tutorials/datasets/: load_datasets.ipynb
tutorials/efficacy_measuring/: measuring_efficacy_classification.ipynb  measuring_efficacy_clustering.ipynb  measuring_efficacy_regression.ipynb
tutorials/events/: hackaton.ipynb  hackaton_bank.ipynb  hackaton_compas.ipynb
tutorials/examples/: HAI Bias Measuring and Mitigation.ipynb
tutorials/explainability/: explainability_adult.ipynb  explainability_debug.ipynb  explainability_debug.py  explainability_diabetes copy.ipynb  explainability_diabetes.ipynb  explainability_diabetes_us_crime.ipynb  explainability_us_crime.ipynb  global_importance.ipynb  global_importance_comparison.ipynb  local_importance.ipynb  metrics_debug.py  metrics_debug_shap.py  metrics_debugbkp2.py  paper_explainability.ipynb  paper_explainability.py  permutation.ipynb  surrogate.ipynb  test.py  utils.py
tutorials/measuring_bias_tutorials/: measuring_bias_regression.ipynb
tutorials/mitigating_bias_tutorials/: clustering.py  data_loader.py  mitigating_bias_classification.ipynb  mitigating_bias_classification_pipeline.ipynb  mitigating_bias_recommender_preprocessing.ipynb  (+7 more)
workflows/: restrict_pr_to_main.yml
(+2135 files in other folders)
