[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "holistic-ai"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "crismunoz", email = "cristian.munoz@holisticai.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["scikit-learn>=1.0.2"]

[project.optional-dependencies]
bias = [
  "tqdm>=4.64.1",
  "cvxpy[cbc]>1.3.0",
  "cvxopt>=1.3.0",
  "seaborn>=0.11.2",
  "networkx>=3.1",
]
explainability = ["lime>=0.2.0.1", "shap>=0.42.1", "pydotplus", "dtreeviz"]
all = [
  "tqdm>=4.64.1",
  "cvxpy[cbc]>1.3.0",
  "cvxopt>=1.3.0",
  "seaborn>=0.11.2",
  "networkx>=3.1",
  "lime>=0.2.0.1",
  "shap>=0.42.1",
  "pydotplus",
  "dtreeviz",
]

[project.urls]
Documentation = "https://github.com/crismunoz/holistic-ai#readme"
Issues = "https://github.com/crismunoz/holistic-ai/issues"
Source = "https://github.com/crismunoz/holistic-ai"

[tool.hatch.version]
path = "src/holisticai/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/holisticai tests}"

[tool.coverage.run]
source_pkgs = ["holisticai", "tests"]
branch = true
parallel = true
omit = ["src/holisticai/__about__.py"]

[tool.coverage.paths]
holistic_ai = ["src/holisticai", "*/holisticai/src/holisticai"]
tests = ["tests", "*/holisticai/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.ruff]
extend = "ruff_default.toml"
exclude = ["docs/**", "tests/**", "tutorials/**"]

[tool.hatch.envs.docs]
dependencies = [
  "sphinx",
  "pydata-sphinx-theme",
  "myst_parser",
  "nbsphinx",
  "sphinx_copybutton",
  "sphinx_design",
  "sphinx_togglebutton",
  "sphinxcontrib.youtube",
]

[tool.hatch.envs.docs.scripts]
foo = ["which sphinx-build"]
foo2 = ["which python"]
build = [
  "PYTHONPATH=./src sphinx-build -M html docs/source docs/build -W --keep-going",
]

[tool.hatch.envs.testing]
dependencies = [
  "tqdm>=4.64.1",
  "cvxpy[cbc]>1.3.0",
  "cvxopt>=1.3.0",
  "seaborn>=0.11.2",
  "networkx>=3.1",
  "pydotplus",
  "dtreeviz",
  "flake8>=5.0.4",
  "pre-commit>=2.20.0",
  "pytest>=7.1.3",
  "commitizen>=2.40.0",
  "lime>=0.2.0.1",
  "shap>=0.42.1",
  "ipykernel>=6.25.2",
]
paths = ["./src"]

[tool.hatch.envs.testing.scripts]
run = ["python -m pytest"]

[tool.hatch.envs.default]
env-vars = { PYTHONPATH = "src" }

[tool.hatch.build.targets.wheel]
packages = ["src/holisticai"]
